--- a/src/main/webapp/META-INF/resources/libraries/acme/css/acme.css
+++ b/src/main/webapp/META-INF/resources/libraries/acme/css/acme.css
@@ -87,7 +87,7 @@ footer {
 /* Patches to datatables --------------------------------------------------- */
 
 table.dataTable tbody tr.selected {
-	background-color: LightYellow !important;
+	background-color: Black !important;
 	color: Black;
 }
 
